@@ -1,3 +1,10 @@
+Tue Jul 30 16:45:45 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/deployment/Container_T.h:
+        * cuts/iccm/deployment/Container_T.cpp:
+
+          Fixed compilation errors with TAO trunk
+
 Wed Jul  3 12:21:02 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/iccm/arch/portico/servant/Portico_Servant.mpc:
